Update CSS file name from Home.module.css to Home.css and refactor styles to prevent fixed navbar overlap

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -9,7 +9,7 @@
 .heroContent {
   max-width: 1200px;
   margin: auto;
-  margin-top: 16rem; /* Margin from the top of the hero section */
+  margin-top: 22rem; /* Margin from the top of the hero section */
   display: flex;
   flex-direction: column;
 }
@@ -50,7 +50,7 @@
 .helloAnimeContainer {
   max-width: 80rem;
   position: absolute;
-  top: 6rem; /* Position from the top of the hero section */
+  top: 12rem; /* Position from the top of the hero section */
   left: 0;
   right: 0;
   margin: auto;
@@ -66,7 +66,7 @@
 /* Media queries for responsive design */
 @media screen and (min-width: 400px) {
   .heroContent {
-    margin-top: 18rem;
+    margin-top: 25rem;
   }
 
   .tagline {
@@ -83,10 +83,6 @@
 }
 
 @media screen and (min-width: 500px) {
-  .heroContent {
-    margin-top: 22rem;
-  }
-
   .tagline {
     font-size: 2.2rem;
   }
@@ -94,7 +90,7 @@
 
 @media screen and (min-width: 600px) {
   .heroContent {
-    margin-top: 24rem;
+    margin-top: 28rem;
   }
 
   .tagline {
@@ -107,9 +103,9 @@
   }
 }
 
-@media screen and (min-width: 750px) {
+@media screen and (min-width: 740px) {
   .heroContent {
-    margin-top: 30rem;
+    margin-top: 34rem;
   }
 
   .tagline {
